re aligned index layout, fixed navbar

--- a/inst/bootstrap/css/bootstrap.css
+++ b/inst/bootstrap/css/bootstrap.css
@@ -12,6 +12,7 @@ html {
 }
 body {
   margin: 0;
+  padding-top: 50px;
 }
 article,
 aside,
